--- a/templates/market/checkout.html
+++ b/templates/market/checkout.html
@@ -48,7 +48,62 @@
     {% endfor %}
     </div>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&disable-funding=credit"></script>
+        <!-- Sample PayPal credentials (client-id) are included -->
+        <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&intent=capture&enable-funding=venmo" data-sdk-integration-source="integrationbuilder"></script>
+        <script>
+          const paypalButtonsComponent = paypal.Buttons({
+              // optional styling for buttons
+              // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
+              style: {
+                color: "gold",
+                shape: "rect",
+                layout: "vertical"
+              },
+
+              // set up the transaction
+              createOrder: (data, actions) => {
+                  // pass in any options from the v2 orders create call:
+                  // https://developer.paypal.com/api/orders/v2/#orders-create-request-body
+                  const createOrderPayload = {
+                      purchase_units: [
+                          {
+                              amount: {
+                                  value: "88.44"
+                              }
+                          }
+                      ]
+                  };
+
+                  return actions.order.create(createOrderPayload);
+              },
+
+              // finalize the transaction
+              onApprove: (data, actions) => {
+                  const captureOrderHandler = (details) => {
+                      const payerName = details.payer.name.given_name;
+                      console.log('Transaction completed');
+                  };
+
+                  return actions.order.capture().then(captureOrderHandler);
+              },
+
+              // handle unrecoverable errors
+              onError: (err) => {
+                  console.error('An error prevented the buyer from checking out with PayPal');
+              }
+          });
+
+          paypalButtonsComponent
+              .render("#paypal-button-container")
+              .catch((err) => {
+                  console.error('PayPal Buttons failed to render');
+              });
+        </script>
+      </body>
+    </html>
+
+
+    {% comment %} <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&disable-funding=credit"></script>
         
     
     <script>
@@ -80,7 +135,7 @@
                 });
             }
         }).render('#paypal-button-container');
-    </script>
+    </script> {% endcomment %}
 
 
     <script type="text/javascript">
