--- a/templates/market/checkout.html
+++ b/templates/market/checkout.html
@@ -55,7 +55,7 @@
               // optional styling for buttons
               // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
               style: {
-                color: "gold",
+                color: "blue",
                 shape: "rect",
                 layout: "vertical"
               },
@@ -107,7 +107,7 @@
     <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&intent=capture&enable-funding=venmo" data-sdk-integration-source="integrationbuilder"></script>
     
     <script>
-        var total = '{{order.get_cart_total}}';
+        var total = '{{total}}';
 
         // Render the PayPal button into #paypal-button-container
         paypal.Buttons({
