--- a/templates/market/checkout.html
+++ b/templates/market/checkout.html
@@ -48,61 +48,6 @@
     {% endfor %}
     </div>
 
-        {% comment %} <!-- Sample PayPal credentials (client-id) are included -->
-        <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&intent=capture&enable-funding=venmo" data-sdk-integration-source="integrationbuilder"></script>
-        <script>
-          const paypalButtonsComponent = paypal.Buttons({
-              // optional styling for buttons
-              // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
-              style: {
-                color: "blue",
-                shape: "rect",
-                layout: "vertical"
-              },
-
-              // set up the transaction
-              createOrder: (data, actions) => {
-                  // pass in any options from the v2 orders create call:
-                  // https://developer.paypal.com/api/orders/v2/#orders-create-request-body
-                  const createOrderPayload = {
-                      purchase_units: [
-                          {
-                              amount: {
-                                  value: "88.44"
-                              }
-                          }
-                      ]
-                  };
-
-                  return actions.order.create(createOrderPayload);
-              },
-
-              // finalize the transaction
-              onApprove: (data, actions) => {
-                  const captureOrderHandler = (details) => {
-                      const payerName = details.payer.name.given_name;
-                      console.log('Transaction completed');
-                  };
-
-                  return actions.order.capture().then(captureOrderHandler);
-              },
-
-              // handle unrecoverable errors
-              onError: (err) => {
-                  console.error('An error prevented the buyer from checking out with PayPal');
-              }
-          });
-
-          paypalButtonsComponent
-              .render("#paypal-button-container")
-              .catch((err) => {
-                  console.error('PayPal Buttons failed to render');
-              });
-        </script>
-      </body>
-    </html>
- {% endcomment %}
-
     {% comment %} <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&disable-funding=credit"></script> {% endcomment %}
     <script src="https://www.paypal.com/sdk/js?client-id=ATIFwJR5tYylPX9_xuTSTnu2pbz70P_G2g3xz9G42u9L84AQ3C_V1pjljlwSja3IFa2L6-uBjMJvMC2j&currency=USD&intent=capture&enable-funding=venmo" data-sdk-integration-source="integrationbuilder"></script>
     
@@ -139,14 +84,6 @@
 
 
     <script type="text/javascript">
-        var shipping = '{{order.shipping}}';
-
-        if (shipping == 'False') {
-            document.getElementById('shipping-info').innerHTML= '';
-            document.getElementById('form-wrapper').classList.add("hidden");
-            document.getElementById('payment-info').classList.remove("hidden");
-        }
-
         var form = document.getElementById('form');
         csrftoken = form.getElementsByTagName("input")[0].value;
 
@@ -161,17 +98,10 @@
             console.log("Payment button clicked");
 
             var shippingInfo = {
-                'address': null,
-                'city': null,
-                'state': null,
-                'zipcode': null,
-            }
-
-            if (shipping != 'False') {
-                shippingInfo.address = form.address.value;
-                shippingInfo.city = form.city.value;
-                shippingInfo.state = form.state.value;
-                shippingInfo.zipcode = form.zipcode.value;
+                'address': form.address.value,
+                'city': form.city.value,
+                'state': form.state.value,
+                'zipcode': form.zipcode.value,
             }
 
             var url = '/process_order/';
